# cczu_cv_training

./: .gitignore  CMakeLists.txt  README.md
C_Preview/homework_submit/: Dijkstra.cpp  排序.cpp  数楼梯._递推.cpp  数楼梯_递归.cpp  斐波那契数列_递归.cpp  斐波那契数列_递推.cpp  聪明的约瑟夫.cpp  计算阶乘_不用循环.cpp  计算阶乘_用循环.cpp  质数口袋.cpp
bigWork/: CMakeLists.txt
bigWork/.unioncode/: project.properties
bigWork/src/: colorPicker.cpp  findColor.cpp  getContours.cpp  main.cpp
