cmake_minimum_required(VERSION 3.27)
project(cczu_cv_training)

set(CMAKE_CXX_STANDARD 14)

add_executable(cczu_cv_training
        C_Preview/homework_submit/计算阶乘_用循环.cpp
        C_Preview/homework_submit/斐波那契数列_递推.cpp
        C_Preview/homework_submit/斐波那契数列_递归.cpp
        C_Preview/homework_submit/排序.cpp
        C_Preview/homework_submit/排序.cpp
        C_Preview/homework_submit/计算阶乘_不用循环.cpp
        C_Preview/homework_submit/质数口袋.cpp)
